fixed status panel on mobile devices

--- a/minesweeper.css
+++ b/minesweeper.css
@@ -201,7 +201,7 @@ h1 {
         background-size: 20px;
     }
     .counter {
-        width: 40px;
+        width: 50px;
         font-size: 28px;
         height: 30px;
     }
